--- a/src/main/webapp/AdminHomePage.html
+++ b/src/main/webapp/AdminHomePage.html
@@ -3,8 +3,37 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
+<style>
+	*{
+		padding: 0px;
+		margin: 0px;
+		box-sizing: border-box;
+	}
+	body{
+		background-color: gray;
+	}
+	nav{
+		height: 70px;
+		background-color: black;
+	}
+	nav #div1{
+		height: 70px;
+		background-color: white;
+		font-size: 40px;
+	}
+</style>
+
 </head>
 <body>
-	<h1>admin page</h1>
+	
+	<nav>
+		<div id="div1">
+			<a href="AddItem.html"><button>Add Item</button></a>
+			<a href="viewIten"><button>view menu</button></a>
+			<a href="viewCus"><button>view Customer</button></a>
+			<a href="logout"><button>Logout</button></a>
+		</div>
+	</nav>
+	<h1>welcome to admine page</h1>
 </body>
 </html>
